<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/calbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="72dp"
                android:layout_marginLeft="72dp"
                android:layout_marginTop="108dp"
                android:text="@string/calculate"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/chkSmoker" />

            <RadioGroup
                android:id="@+id/radGroup"
                android:layout_width="303dp"
                android:layout_height="78dp"
                android:layout_marginTop="4dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toEndOf="@+id/gender"
                app:layout_constraintTop_toBottomOf="@+id/spinnerAge">

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="44dp"
                    android:text="@string/male"
                    app:layout_constraintStart_toEndOf="@+id/gender"
                    app:layout_constraintTop_toBottomOf="@+id/spinnerAge" />

                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="29dp"
                    android:layout_marginLeft="29dp"
                    android:layout_marginTop="44dp"
                    android:layout_marginEnd="117dp"
                    android:layout_marginRight="117dp"
                    android:text="@string/female"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/male"
                    app:layout_constraintTop_toBottomOf="@+id/spinnerAge" />
            </RadioGroup>

            <Button
                android:id="@+id/resetbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginLeft="48dp"
                android:layout_marginTop="172dp"
                android:text="@string/reset"
                app:layout_constraintStart_toEndOf="@+id/calbutton"
                app:layout_constraintTop_toBottomOf="@+id/radGroup" />

            <TextView
                android:id="@+id/totalAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="72dp"
                android:layout_marginLeft="72dp"
                android:layout_marginTop="28dp"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/total"
                app:layout_constraintTop_toBottomOf="@+id/chkSmoker" />

            <TextView
                android:id="@+id/smoker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="32dp"
                android:text="@string/smoker"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gender" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="35dp"
                android:layout_marginEnd="53dp"
                android:layout_marginRight="53dp"
                android:text="@string/title"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="40dp"
                android:text="@string/total"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/smoker" />

            <TextView
                android:id="@+id/age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="37dp"
                android:text="@string/age"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title" />

            <TextView
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="56dp"
                android:text="@string/gender"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/age" />

            <Spinner
                android:id="@+id/spinnerAge"
                android:layout_width="177dp"
                android:layout_height="31dp"
                android:layout_marginStart="37dp"
                android:layout_marginLeft="37dp"
                android:layout_marginTop="29dp"
                android:entries="@array/AgeRange"
                app:layout_constraintStart_toEndOf="@+id/age"
                app:layout_constraintTop_toBottomOf="@+id/title" />

            <CheckBox
                android:id="@+id/chkSmoker"
                android:layout_width="89dp"
                android:layout_height="34dp"
                android:layout_marginStart="44dp"
                android:layout_marginLeft="44dp"
                android:layout_marginTop="31dp"
                android:text="@string/yes"
                app:layout_constraintStart_toEndOf="@+id/smoker"
                app:layout_constraintTop_toBottomOf="@+id/radGroup" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>